--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "firebase": "^5.10.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "react-transition-group": "^4.0.0",
     "typescript": "^3.4.2"
   },
   "scripts": {
