--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^5.10.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-ga": "^2.5.7",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "react-transition-group": "^4.0.0",
